--- a/scripts/REQUIREMENTS.txt
+++ b/scripts/REQUIREMENTS.txt
@@ -1,13 +1,13 @@
-cffi==1.2.1
-cryptography==1.0
-gspread==0.2.5
-httplib2==0.9.1
-idna==2.0
-oauth2client==1.4.12
-pyasn1==0.1.8
-pyasn1-modules==0.0.7
+cffi==1.7.0
+cryptography==1.4
+gspread==0.4.1
+httplib2==0.9.2
+idna==2.1
+oauth2client==3.0.0
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
 pycparser==2.14
-pyOpenSSL==0.15.1
-rsa==3.2
-six==1.9.0
-wheel==0.24.0
+pyOpenSSL==16.0.0
+requests==2.11.0
+rsa==3.4.2
+six==1.10.0
